Fixing issues